<resources>
    <string name="app_name">Improof</string>
    <string name="signIn" translatable="false">Sign in</string>
    <string name="login">Log in</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- String para el main-->
    <string name="toDo">to do list</string>
    <string name="stats">get stats</string>
    <string name="mychar">my character</string>
    <string name="goals">set goals</string>
    <string name="habits">improve your habits</string>
    <string name="proyects">manage my projects</string>

    <!-- String para Work-->
    <string name="work">Work</string>
    <string name="title_activity_work">Work</string>
    <string name="start_working">Start</string>
    <string name="stop_working">Surrender</string>
    <string name="formatTimer">MM:SS</string>
    <string name="sesion">SESSION WORKED TODAY</string>
    <string name="milestone">MILESTONE</string>
    <string name="project">PROJECT</string>

    <!-- String para Projects-->
    <string name="createproject">Start a New Project</string>
    <string name="acept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- String para Habits-->
    <string name="createHabit">Start a New Habit</string>
    <string name="goal">Goal:</string>
    <string name="reward">Reward</string>
    <string name="habitGoalLabel">Goal:</string>
    <string name="habitRewardLabel">Reward:</string>
    <string name="habitSlashLabel">/</string>
    <string name="habitRepetionsLabel">repetitions</string>
    <string name="habitIncreaseBtn">Increase</string>
    <string name="habitDecreaseBtn">Decrease</string>
    <string name="newHabitTitle">Ingrese el nuevo Habito</string>
    <string name="newHabitName">Name:</string>
    <string name="newHabitGoal">Goal:</string>
    <string name="xpLabel">xp</string>
    <!-- String para ToDoList-->
    <string name="createtask">Start a New Task</string>
    <string name="task">Describe your new task to do: </string>
    <string name="endtask">End task</string>
</resources>
