<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.milagros.improof.WorkActivity">
    <TextView
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="MM:SS"
        android:textColor="@color/black"
        style="@android:style/TextAppearance.Large" />

    <LinearLayout android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button android:id="@+id/tomato_start"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@color/colorlog"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:text="@string/start_working"
            />
        <Button android:id="@+id/tomato_stop"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/stop_working"
            android:visibility="gone"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/proname"
        >
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/milestone"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/milestone"
        >
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sesion"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:id="@+id/session"
        android:text="0/3"/>
</LinearLayout>
