<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.milagros.improof.TaskActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/habits"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnComplete"
            android:background="@color/colorlog"
            android:layout_weight="0.5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/endtask"/>

        <Button
            android:id="@+id/btnCancel"
            android:background="@color/gray"
            android:layout_weight="0.5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>
