<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.milagros.improof.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="0.2"
        android:background="@color/colorframes">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_weight="0.7"
                android:background="@color/colorframes">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="Vida"/>
                <ProgressBar
                    android:id="@+id/vida"
                    android:progressTint="@color/colorlog"
                    android:layout_width="match_parent"
                    android:layout_weight="0.2"
                    android:progress="50"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="Experiencia"/>
                <ProgressBar
                    android:id="@+id/experiencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:progressTint="@color/mana"
                    android:progress="90"
                    style="?android:attr/progressBarStyleHorizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="Level"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorframes"
        android:drawableStart="@drawable/mendicant"
        android:drawablePadding="5dp"
        android:padding="8dp"
        android:textAlignment="center"
       android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/work"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/proyects"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@color/colorframes"
            android:textAlignment="center"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/proyects"/>
        <Button
            android:id="@+id/habits"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:background="@color/colorframes"
            android:textAlignment="center"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/habits"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/todo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@color/colorframes"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/toDo" />
        <Button
            android:id="@+id/goals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:background="@color/colorframes"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/goals"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/character"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:background="@color/colorframes"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/mychar"/>
        <Button
            android:id="@+id/stats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@color/colorframes"
            android:drawableStart="@drawable/mendicant"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/stats"/>
    </LinearLayout>


</LinearLayout>
