<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/light_gray">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="17dp"
        android:id="@+id/habitName"
        android:textColor="@color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:id="@+id/habitCurrentI"
        android:layout_alignBaseline="@+id/habitName"
        android:layout_alignBottom="@+id/habitName"
        android:layout_toEndOf="@+id/habitName"
        android:textColor="@color/black" />

    <TextView
        android:text="@string/habitSlashLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/habitCurrentI"
        android:layout_alignBottom="@+id/habitCurrentI"
        android:layout_toEndOf="@+id/habitCurrentI"
        android:textColor="@color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitGoalTop"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/placeholder"
        android:layout_marginTop="22dp"
        android:id="@+id/imageView"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/habitGoalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textColor="@color/black" />

    <TextView
        android:text="@string/habitRewardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:textColor="@color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView8"
        android:textColor="@color/black"
        android:id="@+id/habitGoalBottom" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coin_gold"
        android:id="@+id/imageView4"
        android:layout_alignBottom="@+id/habitGoldReward"
        android:layout_toStartOf="@+id/habitGoldReward" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:padding="11dp"
        android:layout_below="@+id/habitExp"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/habitDecreaseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:background="@color/colorlog"
            android:layout_marginLeft="5dp"
            android:textColor="@color/light_gray" />

        <Space
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_width="5dp" />

        <Button
            android:text="@string/habitIncreaseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:layout_marginRight="5dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:text="@string/habitRepetionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/habitGoalBottom"
        android:layout_alignBottom="@+id/habitGoalBottom"
        android:layout_toEndOf="@+id/habitGoalBottom" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitExp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/habitGoalBottom" />

    <TextView
        android:text="@string/xpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toEndOf="@+id/habitExp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coin_silver"
        android:id="@+id/imageView3"
        android:layout_alignBottom="@+id/habitBronceReward"
        android:layout_toStartOf="@+id/habitBronceReward" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitSilverReward"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toStartOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coin_bronze"
        android:id="@+id/imageView2"
        android:layout_alignBottom="@+id/habitSilverReward"
        android:layout_toStartOf="@+id/habitSilverReward" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitGoldReward"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitBronceReward"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/habitExp"
        android:layout_alignBottom="@+id/habitExp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>